Add "illegal-access=permit" because jfoenix NEEDS to override access to objects using reflection